fixed overflow issue

--- a/style.scss
+++ b/style.scss
@@ -28,6 +28,7 @@ body {
   display: flex;
   align-items: center;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
 
   transition: box-shadow 0.2s ease-in-out;
   a {
